@@ -1,3 +1,12 @@
+2008-05-29 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCast.c (createIvalType, createIvalStruct, createIvalArray,
+	  createIvalCharPtr, createIvalPtr, createIval),
+	* src/SDCCval.h
+	* src/SDCCval.c (convertIListToConstList, list2expr): handle incomplete
+	  initializers for local auto variables
+	* support/regression/tests/zeropad.c: added testcase for auto initializers
+
 2008-05-26 Raphael Neider <rneider AT web.de>
 
 	* device/lib/pic16/startup/crt0.c,
